<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="Buat Akun"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:background="@color/bluedark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView
            android:id="@+id/tvalamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nl"
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etnamalengkap"
                android:minEms="100"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nt"
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ettelepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="13"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/un"
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etnamapengguna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="40"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:hint="@string/ks"
            android:layout_marginBottom="10dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etpassword"
                android:maxLength="30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btndaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="50dp"
            android:text="@string/register"/>
    </LinearLayout>

</LinearLayout>