<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/blue">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#7EFFFFFF">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="15dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_nurulihsan" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/un"
                android:layout_marginBottom="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:hint="@string/ks"
                android:layout_marginBottom="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/tvlupapassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fp"
                android:layout_gravity="end"
                android:textColor="@color/blue"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/btnmasuk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="50dp"
                android:text="@string/si"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tidak punya akun? "/>
                <TextView
                    android:id="@+id/btndaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Buat akun"
                    android:layout_marginLeft="2dp"
                    android:textColor="@color/blue"/>
            </LinearLayout>
<!--            <Button-->
<!--                android:id="@+id/btndaftar"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignParentBottom="true"-->
<!--                android:text="@string/nha"-->
<!--                app:cornerRadius="50dp"/>-->
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>