<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".muzakki.RequestActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Permintaan Pengambilan"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alamat Pengambilan"
                android:textSize="20dp"/>
            <View
                android:layout_below="@id/r1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginVertical="15dp"
                />
            <TextView
                android:id="@+id/tvnama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama yang request"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilnama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nl"
                android:layout_marginBottom="10dp"
                android:visibility="gone">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etnamalengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/tvnomor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="3dp"
                android:text="Nomor telepon yang request "/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiltelepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nt"
                android:layout_marginBottom="10dp"
                android:visibility="gone">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ettelepon"
                    android:inputType="number"
                    android:maxLength="13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/tvalamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alamat Pengambilan"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilalamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alamat"
                android:layout_marginBottom="10dp"
                android:visibility="gone">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etalamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnsu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:backgroundTint="@color/blue"
                android:text="EDIT"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:id="@+id/tvjeniszakat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="Jenis Zakat"/>
            <TextView
                android:id="@+id/tvtotalzakat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginVertical="10dp"
                android:text="Jumlah yang di zakatkan"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
    <Button
        android:id="@+id/btnrequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/blue"
        android:text="Request"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>